--- a/glucose-mobi/Android/app/src/main/res/values/strings.xml
+++ b/glucose-mobi/Android/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">AI Glucose</string>
+    <string name="record">紀錄</string>
+    <string name="figure">資料圖表</string>
+    <string name="acc">帳號</string>
 </resources>
