--- a/glucose-mobi/Android/app/src/main/res/values/strings.xml
+++ b/glucose-mobi/Android/app/src/main/res/values/strings.xml
@@ -12,10 +12,11 @@
     <string name="insulin_injection_volume">胰島素注射量</string>
     <string name="submit">送出</string>
     <string name="pw">密碼</string>
-    <string name="sign_in">登入</string>
-    <string name="sign_up">註冊</string>
+    <string name="login">登入</string>
+    <string name="register">註冊</string>
     <string name="email">電子信箱</string>
     <string name="continue_with_google">以 Google 帳號繼續</string>
     <string name="username">使用者名稱</string>
     <string name="username_email">使用者名稱 / 電子信箱</string>
+    <string name="profile">個人資料</string>
 </resources>
