MPAndroidChart for FigureFrag; Change LoginFrag, RegisterFrag, ProfileFrag to AlertDialog and dynamically set visibility of layout

--- a/glucose-mobi/Android/app/src/main/res/values/strings.xml
+++ b/glucose-mobi/Android/app/src/main/res/values/strings.xml
@@ -1,7 +1,4 @@
 <resources>
-    <integer name="min_ems">11</integer>
-    <dimen name="title_text_size">35sp</dimen>
-    <dimen name="group_padding_margin">15dp</dimen>
     <string name="app_name">AI Glucose</string>
     <string name="record">紀錄</string>
     <string name="figure">資料圖表</string>
@@ -12,11 +9,15 @@
     <string name="insulin_injection_volume">胰島素注射量</string>
     <string name="submit">送出</string>
     <string name="pw">密碼</string>
-    <string name="login">登入</string>
+    <string name="log_in">登入</string>
     <string name="register">註冊</string>
-    <string name="email">電子信箱</string>
-    <string name="continue_with_google">以 Google 帳號繼續</string>
+    <string name="email">Email</string>
+    <string name="log_in_by_google">Google 帳號登入</string>
     <string name="username">使用者名稱</string>
-    <string name="username_email">使用者名稱 / 電子信箱</string>
+    <string name="username_email">使用者名稱 / Email</string>
     <string name="profile">個人資料</string>
+    <string name="glucose_history">血糖軌跡紀錄</string>
+    <string name="cancel">取消</string>
+    <string name="ok">OK</string>
+    <string name="log_out">登出</string>
 </resources>
