--- a/glucose-mobi/Android/app/src/main/res/values/strings.xml
+++ b/glucose-mobi/Android/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">AI Glucose</string>
+    <string name="app_name">Diabeat</string>
     <string name="record">紀錄</string>
     <string name="figure">資料圖表</string>
     <string name="acc">帳號</string>
@@ -12,16 +12,21 @@
     <string name="log_in">登入</string>
     <string name="register">註冊</string>
     <string name="email">Email</string>
-    <string name="log_in_by_google">Google 帳號登入</string>
-    <string name="uid">UID</string>
-    <string name="uid_email">UID / Email</string>
+    <string name="google_sign_in">Google 登入</string>
+    <string name="username">Username</string>
     <string name="profile">個人資料</string>
     <string name="glucose_history">血糖軌跡紀錄</string>
     <string name="cancel">取消</string>
     <string name="ok">OK</string>
     <string name="log_out">登出</string>
-    <string name="invalid_email">&gt; Email 格式錯誤</string>
-    <string name="invalid_uid">&gt; UID 只能包含英文字母和數字</string>
-    <string name="invalid_pw">&gt; 密碼不得為空</string>
-    <string name="invalid_acc">&gt; UID/Email 不得為空</string>
+    <string name="invalid_email">Email格式錯誤</string>
+    <string name="invalid_username">Username只能包含英文字母和數字</string>
+    <string name="invalid_pw">密碼不得為空</string>
+    <string name="invalid_acc">帳號不得為空</string>
+    <string name="host">host</string>
+    <string name="bio_log_in">生物辨識登入</string>
+    <string name="err">錯誤</string>
+    <string name="log_in_fail">登入失敗</string>
+    <string name="email_registered">此Email已被註冊</string>
+    <string name="username_registered">此Username已被註冊</string>
 </resources>
