--- a/glucose-mobi/Android/app/src/main/res/values/strings.xml
+++ b/glucose-mobi/Android/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="ok">OK</string>
     <string name="log_out">登出</string>
     <string name="username_fmt">只能包含英文字母、數字和底線</string>
-    <string name="host">主機</string>
+    <string name="host">Host</string>
     <string name="bio_log_in">生物辨識登入</string>
     <string name="err">錯誤</string>
     <string name="log_in_fail">登入失敗</string>
@@ -32,4 +32,6 @@
     <string name="reme">記得我</string>
     <string name="_192">192</string>
     <string name="_168">168</string>
+    <string name="start_up">啟動時顯示</string>
+    <string name="host_volume_up">Tips : 按音量上顯示此設定</string>
 </resources>
