--- a/glucose-mobi/Android/app/src/main/res/values/strings.xml
+++ b/glucose-mobi/Android/app/src/main/res/values/strings.xml
@@ -19,7 +19,6 @@
     <string name="cancel">取消</string>
     <string name="ok">OK</string>
     <string name="log_out">登出</string>
-    <string name="username_fmt">只能包含英文字母、數字和底線</string>
     <string name="host">Host</string>
     <string name="bio_log_in">生物辨識登入</string>
     <string name="err">錯誤</string>
@@ -34,4 +33,5 @@
     <string name="_168">168</string>
     <string name="start_up">啟動時顯示</string>
     <string name="host_volume_up">Tips : 按音量上顯示此設定</string>
+    <string name="web_client_id">445713935204-nbe44ho6lq9p5sj151qp6pm9pdmdq09p.apps.googleusercontent.com</string>
 </resources>
